# tensi-trossen-studio

./: .env.example  .gitignore  README.md  install-plugins.sh  launcher.py
backend/: camera_service.py  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/routes/: camera_routes.py  config_routes.py  leader_service_routes.py  process_routes.py
backend/app/services/: camera_manager.py  camera_streamer.py  process_manager.py
backend/config/: default_config.json
backend/tests/: conftest.py  test_api.py  test_config.py  test_leader_service_routes.py  test_process_manager.py  test_route_helpers.py
deployment/: CHECKLIST.md  IMPLEMENTATION-COMPLETE.md  IMPLEMENTATION-SUMMARY.md  PC2-SETUP.md  QUICK-START.md  QUICKSTART-TUNNELS.md  README.md  REMOTE-LEADER-SETUP.md  SSH-TUNNEL-GUIDE.md  SUMMARY.md  UDP-ARCHITECTURE.md  UDP-FORWARDING-GUIDE.md  deploy-pc1.sh  leader-service.service  leader_service.py  setup-pc1-udp-wrapper.sh  setup-pc2-udp-relay.sh  ssh-tunnel-complete.sh  ssh-tunnel-leader.sh  start-all-tunnels.sh  start-leader-service.sh  start-remote-leader.sh  tensi-backend.service  tensi-camera.service  test-setup.sh
docs/: ARCHITECTURE.md  HARDWARE-TEST-CHECKLIST.md  STUDIO-USER-GUIDE.md  TROSSEN_LEROBOT_REFERENCE.md
frontend/: .env.development  .env.production  index.html  package-lock.json  package.json  vitest.config.ts
lerobot_plugins/lerobot_teleoperator_remote/: pyproject.toml
lerobot_plugins/lerobot_teleoperator_remote/src/lerobot_teleoperator_remote/: __init__.py  config_remote_leader.py  remote_leader.py
(+32 files in other folders)
