[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_teleoperator_remote"
version = "0.1.0"
description = "Remote Leader Teleoperator for distributed teleoperation over LAN/WAN"
authors = [{ name = "TENSI Lab" }]
requires-python = ">=3.10,<3.13"
dependencies = ["lerobot>=0.4.0"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["lerobot_teleoperator_remote"]
